plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.143'
}

version = mod_version
group = mod_group_id

base {
    archivesName = "${mod_id}-forge"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

repositories {
    maven {
        name = 'Curios'
        url = uri('https://maven.theillusivec4.top/')
    }
    exclusiveContent {
        forRepository {
            maven {
                name = 'Modrinth'
                url = uri('https://api.modrinth.com/maven')
            }
        }
        filter {
            includeGroup 'maven.modrinth'
        }
    }
}

legacyForge {
    version = "${minecraft_version}-${forge_version}"
    validateAccessTransformers = true

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        configureEach {
            gameDirectory = file("run/forge-${name}" + (project.hasProperty('skipCuriosRuntime') ? '-standalone' : ''))
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
            logLevel = org.slf4j.event.Level.INFO
        }
        client {
            client()
            if (project.hasProperty('clientSmoke')) {
                systemProperty 'characternotcontainer.clientSmoke', 'true'
            }
        }
        server {
            server()
            programArgument '--nogui'
        }
        gameTestServer {
            type = 'gameTestServer'
            systemProperty 'forge.enabledGameTestNamespaces', "${project.mod_id},minecraft"
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }

}


dependencies {
    // Curios stays optional; remap its Forge artifact from SRG to official names.
    modCompileOnly "top.theillusivec4.curios:curios-forge:${curios_version}"
    if (!project.hasProperty('skipCuriosRuntime')) {
        modRuntimeOnly "top.theillusivec4.curios:curios-forge:${curios_version}"
    }
    // Flat-directory module coordinates let the legacy toolchain remap local SRG JARs.
    ['needsNotNecessitiesRuntimeJar', 'pufferfishSkillsRuntimeJar', 'armorDamageScalingRuntimeJar',
     'cupboardRuntimeJar', 'relicsRuntimeJar', 'octoLibRuntimeJar', 'architecturyRuntimeJar'].each { propertyName ->
        if (project.hasProperty(propertyName)) {
            def localJar = file(project.property(propertyName))
            repositories.flatDir { dirs localJar.parentFile }
            modRuntimeOnly group: 'local.compat', name: localJar.name.replaceFirst(/\.jar$/, ''), version: 'local'
        }
    }
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

sourceSets.test.compileClasspath += sourceSets.main.compileClasspath
sourceSets.test.runtimeClasspath += sourceSets.main.runtimeClasspath

tasks.named('test', Test).configure {
    useJUnitPlatform()
}

def generateModMetadata = tasks.register('generateModMetadata', Sync) {
    def replaceProperties = [
        minecraft_version: minecraft_version,
        minecraft_version_range: minecraft_version_range,
        forge_version: forge_version,
        loader_version_range: loader_version_range,
        mod_id: mod_id,
        mod_name: mod_name,
        mod_license: mod_license,
        mod_version: mod_version,
        curios_version_range: curios_version_range,
        puffish_skills_version_range: puffish_skills_version_range,
        armor_damage_scaling_version_range: armor_damage_scaling_version_range
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into 'build/generated/sources/modMetadata'
}

sourceSets.main.resources.srcDir generateModMetadata
legacyForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('jar', Jar).configure {
    exclude 'data/characternotcontainer/structures/empty.nbt'
    exclude '**/*GameTests*.class'
    exclude 'com/cappleapple/characternotcontainer/gametest/**'
}

def releaseJar = tasks.named('reobfJar').flatMap { it.archiveFile }
tasks.register('verifyReleaseJarContents') {
    dependsOn tasks.named('reobfJar')
    inputs.file(releaseJar)
    doLast {
        def jarFile = releaseJar.get().asFile
        def zip = new java.util.zip.ZipFile(jarFile)
        try {
            ['META-INF/mods.toml', 'assets/characternotcontainer/lang/en_us.json',
             'assets/characternotcontainer/ui/equipment_screen.json',
             'assets/characternotcontainer/ui/slots.json'].each {
                if (zip.getEntry(it) == null) throw new GradleException("Missing required JAR entry: ${it}")
            }
            zip.entries().each { entry ->
                if (entry.name == 'META-INF/neoforge.mods.toml' || entry.name.contains('GameTests')
                        || entry.name.contains('/gametest/') || entry.name.endsWith('/structures/empty.nbt')) {
                    throw new GradleException("Development or wrong-loader entry in release JAR: ${entry.name}")
                }
                if (entry.name.endsWith('.class')) {
                    zip.getInputStream(entry).withCloseable { stream ->
                        def data = new DataInputStream(stream)
                        data.readInt(); data.readUnsignedShort()
                        if (data.readUnsignedShort() != 61) throw new GradleException("Non-Java-17 class: ${entry.name}")
                    }
                }
            }
        } finally {
            zip.close()
        }
    }
}

tasks.named('check').configure {
    dependsOn tasks.named('verifyReleaseJarContents')
}
